--- a/bhasha/program_committee.yml
+++ b/bhasha/program_committee.yml
@@ -39,7 +39,7 @@
     institution: Indian Institute of Technology Hyderabad, India
   - first_name: Mounika
     last_name: Marreddy
-    institution: International Institute of Information Technology Hyderabad, India
+    institution: Goethe University, Germany
   - first_name: Pawan
     last_name: Goyal
     institution: Indian Institute of Technology Kharagpur, India
